<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Welcome Message Label -->

        <TextView
            android:id="@+id/photo_label"
            style="@style/label_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrationMessage" />

        <include layout="@layout/separator" />

        <!-- Comment Label -->

        <TextView
            android:id="@+id/name_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <!-- Comment Input Text -->

        <EditText
            android:id="@+id/name"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <!-- Comment Label -->

        <include layout="@layout/separator" />

        <TextView
            android:id="@+id/surname_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surname" />

        <!-- Comment Input Text -->

        <EditText
            android:id="@+id/surname"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <!-- Comment Label -->

        <include layout="@layout/separator" />

        <TextView
            android:id="@+id/phone_number_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber" />

        <!-- Comment Input Text -->

        <EditText
            android:id="@+id/phone_number"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLines="1" />

        <!-- Button -->

        <include layout="@layout/separator" />

        <Button
            android:id="@+id/registration_button"
            style="@style/button"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/registration" />
    </LinearLayout>

</ScrollView>