<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Photo Label -->

        <TextView
            android:id="@+id/photo_label"
            style="@style/label_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

        <!-- Photo -->

        <ImageView
            android:id="@+id/photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/photo_margins"
            android:layout_marginRight="@dimen/photo_margins"
            android:background="@android:drawable/ic_menu_camera"
            android:maxHeight="@dimen/photo_max_height"
            android:maxWidth="@dimen/photo_max_width"
            android:scaleType="centerInside" />

        <LinearLayout
            android:id="@+id/photo_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <!-- Take Photo Button -->

            <Button
                android:id="@+id/take_photo_button"
                style="@style/button"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/takePhoto"
                android:textSize="@dimen/text_button" />

            <!-- Remove Photo Button -->

            <Button
                android:id="@+id/remove_photo_button"
                style="@style/button"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/removePhoto"
                android:textSize="@dimen/text_button" />
        </LinearLayout>

        <include layout="@layout/separator" />
        <!-- Comment Label -->

        <TextView
            android:id="@+id/comment_label"
            style="@style/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment" />

        <!-- Comment Input Text -->

        <EditText
            android:id="@+id/comment"
            style="@style/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:maxLength="512"
            android:maxLines="10"
            android:minLines="2" />

        <!-- Button -->

        <include layout="@layout/separator" />

        <Button
            android:id="@+id/upload_button"
            style="@style/button"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/uploadData" />
    </LinearLayout>

</ScrollView>